Update generated library support for com.graphql-java:graphql-java-extended-scalars:21.0